fix(Lotto): Collections의 sort 메서드를 쓰기 위해 정렬 전 가변 리스트 생성하기