@@ -2,16 +2,15 @@ package lotto.utility.vo.response;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-import java.util.Arrays;
+import java.util.List;
 import lotto.domain.Lotto;
-import lotto.utility.vo.response.LottoResponse;
 import org.junit.jupiter.api.Test;
 
 class LottoResponseTest {
     @Test
     void 올바른_형식으로_발행된로또_출력메세지를_생성한다() {
         // given
-        Lotto 로또 = new Lotto(Arrays.asList(5, 6, 3, 4, 1, 2));
+        Lotto 로또 = new Lotto(List.of(5, 6, 3, 4, 1, 2));
 
         // when
         LottoResponse 출력용_응답 = 로또.convertToResponse();
